# admx-lint

./: CMakeLists.txt  Dockerfile.p9  INSTALL.md  README.md
.gear/: admx-lint.spec  rules
.github/workflows/: main.yml
src/: CMakeLists.txt  main.cpp
